grammar.js
    module: $ => repeat($._statement),

    _statement: $ => choice(
      $._simple_statements,
      $._compound_statement,
    ),

    // Simple statements

    import_statement: $ => seq(
      'import',
      $._import_list,
    ),

    import_prefix: _ => repeat1('.'),

    _import_list: $ => seq(
      optional($.import_prefix),
      field('name', choice(
        $.dotted_name,
        $.aliased_import,
      )),
    ),

    aliased_import: $ => seq(
      field('name', $.dotted_name),
      'as',
      field('alias', $.identifier),
    ),

    if_statement: $ => choice(seq(
      'if',
      field('condition', $.expression),
      ':',
      field('consequence', $._suite),
      repeat(field('alternative', $.elif_clause)),
      optional(field('alternative', $.else_clause)),
    ),
      seq(
        field('condition',$.expression),
        ',',
        field('error_message', $.string),
    ),
      seq(
        field('expr1',$.expression),
        'if',
        field('condition',$.expression),
      )),

    schema_expr: $ => seq(
      field('operand_name', $.identifier),
      optional(seq(
        '(',
        optional($.argument_list),
        ')'
      )),
      $.dict_expr,
    ),

    schema_index_signature: $ => seq(
      '[',
      optional(seq(
        field('attr_alias', $.identifier),
        ':'
      )),
      optional('...'),
      field('key_type', $.basic_type),
      ']',
      ':',
      field('value_type', $.type),
      optional(seq(
        '=',
        field('default', $.test)
      )),
      $._newline
    ),

    lambda_expr: $ => prec(PREC.call, seq(
      'lambda',
      field('parameters', $._parameters),
      optional(
        seq(
          '->',
          field('return_type', $.type),
        ),
      ),
      '{',
      field('body', $._suite),
      '}',
    )),

    quant_expr: $ => prec.left(seq(
      field('quant_op', $.quant_op),
      optional(seq(
        field('identifier', $.identifier),
        ',',
      )),
      field('identifier', $.identifier),
      'in',
      field('quant_target', $.quant_target),
      '{',
      choice(
        field('expr1', $.expression),
        seq(
          field('dotted_name', $.dotted_name),
          field('string', $.string)
        )
      ),
      optional(seq(
        'if',
        field('expr2', $.expression)
      )),
      '}',
    )),

    quant_target: $ => prec(1, choice(
      field('dictionary_or_list', $.identifier),
      $.dictionary,
      $.string,
      $.list,
      $.list_comprehension,
      $.config_expr,
      $.dictionary_comprehension,
      seq(
        '[',
        field('integer', $.integer),
        repeat(seq(
          ',',
          field('integer', $.integer)
        )),
        ']'
      )
    )),
    
    quant_op: $ => choice(
      'all',
      'any',
      'filter',
      'map'
    ),

    schema_statement: $ => prec.left(seq(
      'schema',
      field('name', $.parameter),
      ':',
      field('body', $._suite),
    )),

    protocol_statement: $ => seq(
      'protocol',
      field('name', $.identifier),
      ':',
      field('body', $._suite),
    ),

    rule_statement: $ => seq(
      'rule',
      field('name', $.identifier),
      ':',
      field('body', $._suite),
    ),

    check_statement: $ => prec.left(seq(
      'check',
      ':',
      repeat1(seq(
          field('expr1', $.expression),
          optional(seq(
            ',',
            field('error_message', $.string),
          )),
      ),)
    )),

    argument_list: $ => seq(
      '(',
      optional(commaSep1(
        choice(
          $.expression,
          $.keyword_argument,
        ),
      )),
      optional(','),
      ')',
    ),

    decorated_definition: $ => seq(
      repeat1($.decorator),
      field('definition', choice(
        $.schema_index_signature,
        $.schema_statement,
        $.mixin_statement,
        $.rule_statement,
        $.protocol_statement,
        $.check_statement,
      )),
    ),

    decorator: $ => seq(
      '@',
      $.expression,
      $._newline,
    ),

    _suite: $ => choice(
      alias($._simple_statements, $.block),
      seq($._indent, $.block),
      alias($._newline, $.block),
    ),

    block: $ => seq(
      repeat($._statement),
      $._dedent,
    ),

    dotted_name: $ => prec.left(2, sep1($.identifier, choice('?.','.',))),

    // Patterns

    _parameters: $ => seq(
      commaSep1($.parameter),
      optional(','),
    ),

    selector_expression: $ => prec.left(4, seq(
      $.expression,
      repeat1($.select_suffix)
    )),

    paren_expression: $ => seq(
      '(', $.expression, ')'
    ),

    not_operator: $ => prec(PREC.not, seq(
      'not',
      field('argument', $.expression),
    )),

    boolean_operator: $ => choice(
      prec.left(PREC.and, seq(
        field('left', $.expression),
        field('operator', 'and'),
        field('right', $.expression),
      )),
      prec.left(PREC.or, seq(
        field('left', $.expression),
        field('operator', 'or'),
        field('right', $.expression),
      )),
    ),

    config_expr: $ => seq(
      '{',
      optional(choice(
        $.config_entries,
        seq(
          '\n',
          optional($.config_entries)
        )
      )),
      '}'
    ),
    
    config_entries: $ => seq(
      $.config_entry,
      repeat(seq(
        choice(
          ',',
          seq(
            optional(','),
            '\n'
          )
        ),
        $.config_entry
      )),
      optional(','),
      optional('\n')
    ),
    
    config_entry: $ => choice(
      seq(
        $.test,
        choice(':', '=', '+='),
        $.test
      ),
      $.dictionary_splat,
      $.if_entry
    ),

    test: $ => prec(1, choice(
      $.dotted_name,
      $.identifier,
      $.string,
      $.integer,
      $.float,
      $.paren_expression
    )),
    
    binary_operator: $ => {
      const table = [
        [prec.left, '+', PREC.plus],
        [prec.left, '-', PREC.plus],
        [prec.left, '*', PREC.times],
        [prec.left, '/', PREC.times],
        [prec.left, '%', PREC.times],
        [prec.left, '//', PREC.times],
        [prec.right, '**', PREC.power],
        [prec.left, '|', PREC.bitwise_or],
        [prec.left, '&', PREC.bitwise_and],
        [prec.left, '^', PREC.xor],
        [prec.left, '<<', PREC.shift],
        [prec.left, '>>', PREC.shift],
      ];

      // @ts-ignore
      return choice(...table.map(([fn, operator, precedence]) => fn(precedence, seq(
        field('left', $.primary_expression),
        // @ts-ignore
        field('operator', operator),
        field('right', $.primary_expression),
      ))));
    },

    unary_operator: $ => prec(PREC.unary, seq(
      field('operator', choice('+', '-', '~')),
      field('argument', $.primary_expression),
    )),

    sequence_operation: $ => prec(23, seq(choice(
      $.in_operation,
      $.not_in_operation,
      $.concatenation,
      $.subscript,
      $.call,
    ))),
    
    in_operation: $ => prec.left(3, seq(choice($.list_comprehension, $.dictionary_comprehension, $.list, $.dictionary), 'in', choice($.list_comprehension, $.dictionary_comprehension, $.list, $.dictionary))),
    comparison_operator: $ => prec.left(2, seq(
      choice($.primary_expression,$.identifier,$.dotted_name, $.selector_expression),
      repeat1(seq(
        field('operators',
          choice(
            '<',
            '<=',
            '==',
            '!=',
            '>=',
            '>',
            'in',
            alias(seq('not', 'in'), 'not in'),
            'is',
            alias(seq('is', 'not'), 'is not'),
          )),
        $.primary_expression,
      )),
    )),

    assignment: $ => seq(
      field('left', $.dotted_name),
      choice(
        seq('=', field('right', choice($.dotted_name,$.expression,))),
        seq(':', field('type', $.type), '=', field('right', $.expression)),
        alias(seq(':',field('type', $.type)),'null_assignment'),
      ),
    ),

    unification: $ => seq(
      field('left', $.dotted_name),
      ':',
      field('right', $.schema_expr),
    ),
    
    select_suffix: $ => prec(44, choice(
      seq('.', $.identifier),
      seq('?.', $.identifier)
    )),

    attribute: $ => prec.right(11, seq(
      field('name', $.identifier),
      optional(seq(
        field('is_mutable', $.isMutableFlag),
        field('type', choice($.type, $.union_type)),
        optional(seq('=', field('value', $.expression)))
      ))
    )),
    
    optional_attribute: $ => prec(PREC.call, seq(
      field('object', $.primary_expression),
      '?.',
      field('attribute', $.identifier),
    )),

    optional_item: $ => prec(PREC.call, seq(
      field('object', $.primary_expression),
      '?[',
      field('index', $.expression),
      ']',
    )),

    subscript: $ => prec(PREC.call, seq(
      field('value', $.primary_expression),
      '[',
      commaSep1(field('subscript', choice($.expression, $.slice))),
      optional(','),
      ']',
    )),

    slice: $ => seq(
      optional($.expression),
      ':',
      optional($.expression),
      optional(seq(':', optional($.expression))),
    ),

    call: $ => prec(PREC.call, seq(
      field('function', $.primary_expression),
      field('arguments', $.argument_list),
    )),

    typed_parameter: $ => prec(PREC.typed_parameter, choice(seq(
      $.identifier,
      ':',
      field('type', $.type),
    ),
    // for schema argument type annotation
    prec.left(seq(
      $.identifier,
      '[',
      $.identifier,
      ':',
      field('type',$.type),
      ']',
    )))),

    // Types

    type: $ => choice(
      $.schema_type,
      $.union_type,
      $.function_type,
      $.basic_type,
      $.list_type,
      $.dict_type,
      $.literal_type,
    ),
    schema_type: $ => $.dotted_name,
    basic_type: _ => choice('str', 'int', 'float', 'bool', 'any'),
    list_type: $ => prec.left(seq('[', optional($.type), ']')),
    dict_type: $ => prec.left(seq('{', optional($.type), ':', optional($.type), '}')),
    keyword_argument: $ => seq(
      field('name', $.identifier),
      '=',
      field('value', $.expression),
    ),

    // Literals

    list: $ => seq(
      '[',
      optional($._collection_elements),
      ']',
    ),

    dictionary: $ => prec(2, seq(
      '{',
      optional(commaSep1(choice($.pair, $.dictionary_splat))),
      optional(','),
      '}'
    )),

    dict_expr: $ => seq(
      '{',
      repeat(seq(
        choice($.pair, $.dictionary_splat),
        optional(',')
      )),
      '}',
    ),

    pair: $ => seq(
      field('key', $.expression),
      choice(':', '=', '+='),
      field('value', $.expression),
    ),

    list_comprehension: $ => seq(
      '[',
      field('body', $.expression),
      $._comprehension_clauses,
      ']',
    ),

    _comprehension_clauses: $ => seq(
      $.for_in_clause,
      repeat(choice(
        $.for_in_clause,
        $.if_clause,
      )),
    ),

    _collection_elements: $ => prec(1, commaSep1(choice(
      $.expression, $.list_splat,
    ))),

    for_in_clause: $ => prec.left(seq(
      'for',
      field('left', $.identifier),
      'in',
      field('right', $.expression),
      optional(','),
    )),

    conditional_expression: $ => prec.right(PREC.conditional, seq(
      $.expression,
      'if',
      $.expression,
      'else',
      $.expression,
    )),

    string: $ => seq(
      $.string_start,
      repeat($.string_content),
      $.string_end,
    ),

    string_content: $ => prec.right(repeat1(
      choice(
        $.escape_interpolation,
        $.escape_sequence,
        $._not_escape_sequence,
        $._string_content,
      ))),

    escape_sequence: _ => token.immediate(prec(1, seq(
      '\\',
      choice(
        /u[a-fA-F\d]{4}/,
        /U[a-fA-F\d]{8}/,
        /x[a-fA-F\d]{2}/,
        /\d{3}/,
        /\r?\n/,
        /['"abfrntv\\]/,
        /N\{[^}]+\}/,
      ),
    ))),

    _not_escape_sequence: _ => token.immediate('\\'),

    _string_content: _ => token.immediate(/[^\\{}]+/),

    integer: $ => token(choice(
      seq(
        choice('0x', '0X'),
        repeat1(/_?[A-Fa-f0-9]+/),
      ),
      seq(
        choice('0o', '0O'),
        repeat1(/_?[0-7]+/),
      ),
      seq(
        choice('0b', '0B'),
        repeat1(/_?[0-1]+/),
      ),
      seq(
        repeat1(/[0-9]+_?/),
        field('multiplier', optional(choice('n', 'u', 'm', 'k', 'K', 'M', 'G', 'T', 'P', 'Ki', 'Mi', 'Gi', 'Ti', 'Pi'))),
      ),
    )),

    float: _ => {
      const digits = repeat1(/[0-9]+_?/);
      const exponent = seq(/[eE][\+-]?/, digits);

      return token(seq(
        choice(
          seq(digits, '.', optional(digits), optional(exponent)),
          seq(optional(digits), '.', digits, optional(exponent)),
          seq(digits, exponent),
        ),
      ));
    },

    identifier: _ => /[_$a-zA-Z][_$\p{XID_Continue}]*/,

    true: _ => 'True',
    false: _ => 'False',
    none: _ => 'None',
    comment: _ => token(seq('#', /.*/)),
