test/corpus/expr.txt
================================================================================
binary expression
================================================================================

1 ** 2 + 2 * 3

--------------------------------------------------------------------------------

(module
  (binary_operator
    (binary_operator
      (integer)
      (integer))
    (binary_operator
      (integer)
      (integer))))

================================================================================
unary expression
================================================================================

~1

--------------------------------------------------------------------------------

(module
  (unary_operator
    (integer)))

================================================================================
Index expression
================================================================================

"abc"[1]

--------------------------------------------------------------------------------

(module
  (subscript
    (string
      (string_start)
      (string_content)
      (string_end))
    (integer)))

================================================================================
slice expression
================================================================================

"abc"[1:2]

--------------------------------------------------------------------------------

(module
  (subscript
    (string
      (string_start)
      (string_content)
      (string_end))
    (slice
      (integer)
      (integer))))

================================================================================
conditional expression
================================================================================

x = True if enabled else False

--------------------------------------------------------------------------------

(module
  (assignment
    (dotted_name
      (identifier))
    (conditional_expression
      (true)
      (attribute
        (identifier))
      (false))))

================================================================================
function invocation
================================================================================

print("hello world", end="")

--------------------------------------------------------------------------------

(module
  (call
    (attribute
      (identifier))
    (argument_list
      (string
        (string_start)
        (string_content)
        (string_end))
      (keyword_argument
        (identifier)
        (string
          (string_start)
          (string_end))))))

================================================================================
Comprehensions
================================================================================

[x * x for x in range(5)] 

--------------------------------------------------------------------------------

(module
      (list_comprehension
        (binary_operator
          (attribute
            (identifier))
          (attribute
            (identifier)))
        (for_in_clause
          (identifier)
          (call
            (attribute
              (identifier))
            (argument_list
              (integer))))))

================================================================================
selector expression
================================================================================

myDict = {key = "value"}
result = myDict.key

--------------------------------------------------------------------------------

(module
      (assignment
        (dotted_name
          (identifier))
        (dictionary
          (pair
            (attribute
              (identifier))
            (string
              (string_start)
              (string_content)
              (string_end)))))
      (assignment
        (dotted_name
          (identifier))
        (dotted_name
          (identifier)
          (identifier))))

================================================================================
selector expression with ? operator
================================================================================

data = {key = "value"}
a = data?.key     
b = data?.name

--------------------------------------------------------------------------------

(module
  (assignment
    (dotted_name
      (identifier))
    (dictionary
      (pair
        (attribute
          (identifier))
        (string
          (string_start)
          (string_content)
          (string_end)))))
  (assignment
    (dotted_name
      (identifier))
    (optional_attribute
      (attribute
        (identifier))
      (identifier)))
  (assignment
    (dotted_name
      (identifier))
    (optional_attribute
      (attribute
        (identifier))
          (identifier))))

================================================================================
attribute expression
================================================================================

schema Person:
  name: str

person = Person {name: "Alice"}
name1 = person.name

--------------------------------------------------------------------------------

 (module
      (schema_statement
        (identifier)
        (block
          (assignment
            (dotted_name
              (identifier))
            (basic_type))))
      (assignment
        (dotted_name
          (identifier))
        (schema_expr
          (identifier)
          (dict_expr
            (pair
              (attribute
                (identifier))
              (string
                (string_start)
                (string_content)
                (string_end))))))
      (assignment
        (dotted_name
          (identifier))
        (dotted_name
          (identifier)
          (identifier))))

================================================================================
optional attribute expression
================================================================================

schema Person:
  name: str

person = Person {name: "Alice"}
name2 = person?.name

--------------------------------------------------------------------------------

(module
      (schema_statement
        (identifier)
        (block
          (assignment
            (dotted_name
              (identifier))
            (basic_type))))
      (assignment
        (dotted_name
          (identifier))
        (schema_expr
          (identifier)
          (dict_expr
            (pair
              (attribute
                (identifier))
              (string
                (string_start)
                (string_content)
                (string_end))))))
      (assignment
        (dotted_name
          (identifier))
        (optional_attribute
          (attribute
            (identifier))
          (identifier))))

================================================================================
optional item expression
================================================================================

datalist = [[1], 2, 3]
item = datalist?[0]

--------------------------------------------------------------------------------

(module
      (assignment
        (dotted_name
          (identifier))
        (list
          (list
            (integer))
          (integer)
          (integer)))
      (assignment
        (dotted_name
          (identifier))
        (optional_item
          (attribute
            (identifier))
          (integer))))

================================================================================
null coalesce expression
================================================================================

data = {"name": {"key": "value"}}
name3 = data["name"] or "name3_value"

--------------------------------------------------------------------------------

(module
  (assignment
    (dotted_name
      (identifier))
    (dictionary
      (pair
        (string
          (string_start)
          (string_content)
          (string_end))
        (dictionary
          (pair
            (string
              (string_start)
              (string_content)
              (string_end))
            (string
              (string_start)
              (string_content)
              (string_end)))))))
      (assignment
        (dotted_name
          (identifier))
        (boolean_operator
          (subscript
            (attribute
             (identifier))
            (string
              (string_start)
              (string_content)
              (string_end)))
          (string
            (string_start)
            (string_content)
            (string_end)))))

================================================================================
paren expression
================================================================================

(a + b) * c

--------------------------------------------------------------------------------

(module
  (binary_operator
    (paren_expression
      (binary_operator
        (attribute
          (identifier))
        (attribute
          (identifier))))
    (attribute
      (identifier))))

================================================================================
Expression with 'in' operator
================================================================================

["gg"] in ["gg","eggs"]

--------------------------------------------------------------------------------

(module
  (sequence_operation
    (in_operation
      (list
        (string
          (string_start)
          (string_content)
          (string_end)))
      (list
        (string
          (string_start)
          (string_content)
          (string_end))
        (string
          (string_start)
          (string_content)
          (string_end))))))

================================================================================
boolean expression with 'and' operator
================================================================================

x = True and False

--------------------------------------------------------------------------------

(module
  (assignment
    (dotted_name
      (identifier))
    (boolean_operator
      (true)
      (false))))

================================================================================
boolean expression with 'or' operator
================================================================================

y = True or False

--------------------------------------------------------------------------------

(module
  (assignment
    (dotted_name
      (identifier))
    (boolean_operator
      (true)
      (false))))

================================================================================
not operator with boolean expression
================================================================================

x = not True

--------------------------------------------------------------------------------

(module
  (assignment
    (dotted_name
      (identifier))
    (not_operator
      (true))))

================================================================================
not operator with comparison expression
================================================================================

y = not (1 == 2)

--------------------------------------------------------------------------------

(module
  (assignment
    (dotted_name
      (identifier))
    (not_operator
      (paren_expression
        (comparison_operator
          (integer)
          (integer))))))

================================================================================
lambda expression 
================================================================================

g = lambda x: str, y: int -> int { 
  x * y
}

--------------------------------------------------------------------------------

(module
  (assignment
    (dotted_name
      (identifier))
    (lambda_expr
      (typed_parameter
        (identifier)
        (type
          (basic_type)))
      (typed_parameter
        (identifier)
        (type
          (basic_type)))
      (type
        (basic_type))
      (block
        (binary_operator
          (attribute
            (identifier))
          (attribute
            (identifier)))))))

================================================================================
Comparison operators
================================================================================

a = 5 < 10
b = "apple" == "orange"
c = 3.14 > 3.14
d = "hello" != "world"
e = 10 <= 20
f = 7 >= 7
g = x in [1, 2, 3]
h = y not in ["a", "b", "c"]
i = x is None
j = y is not None

--------------------------------------------------------------------------------

(module
  (assignment
    (dotted_name
      (identifier))
    (comparison_operator
          (integer)
          (integer)))
      (assignment
        (dotted_name
          (identifier))
        (comparison_operator
          (string
            (string_start)
            (string_content)
            (string_end))
          (string
            (string_start)
            (string_content)
            (string_end))))
      (assignment
        (dotted_name
          (identifier))
        (comparison_operator
          (float)
          (float)))
      (assignment
        (dotted_name
          (identifier))
          (comparison_operator
          (string
            (string_start)
            (string_content)
            (string_end))
          (string
            (string_start)
            (string_content)
            (string_end))))
      (assignment
        (dotted_name
          (identifier))
      (comparison_operator
          (integer)
          (integer)))
      (assignment
        (dotted_name
          (identifier))
      (comparison_operator
          (integer)
          (integer)))
      (assignment
        (dotted_name
          (identifier))
      (comparison_operator
          (attribute
            (identifier))
          (list
            (integer)
            (integer)
            (integer))))
      (assignment
        (dotted_name
          (identifier))
      (comparison_operator
          (attribute
            (identifier))
          (list
            (string
              (string_start)
              (string_content)
              (string_end))
            (string
              (string_start)
              (string_content)
              (string_end))
            (string
              (string_start)
              (string_content)
              (string_end)))))
      (assignment
        (dotted_name
          (identifier))
        (comparison_operator
          (attribute
            (identifier))
          (none)))
      (assignment
        (dotted_name
          (identifier))
        (comparison_operator
          (attribute
            (identifier))
          (none))))

================================================================================
Smoke expression 
================================================================================

"\"1\"\n"
--------------------------------------------------------------------------------

(module
  (string
    (string_start)
    (string_content
      (escape_sequence)
      (escape_sequence)
      (escape_sequence))
    (string_end)))

================================================================================
Non-literal expressions
================================================================================

p = (a + b) * c  
q = x and y       
r = not x         

--------------------------------------------------------------------------------

(module
  (assignment
    (dotted_name
      (identifier))
    (binary_operator
      (paren_expression
        (binary_operator
          (attribute
            (identifier))
          (attribute
            (identifier))))
      (attribute
        (identifier))))
  (assignment
    (dotted_name
      (identifier))
    (boolean_operator
      (attribute
        (identifier))
      (attribute
        (identifier))))
  (assignment
    (dotted_name
      (identifier))
    (not_operator
      (attribute
        (identifier)))))

================================================================================
String literal expressions
================================================================================

"1234"
--------------------------------------------------------------------------------

(module
  (string
    (string_start)
    (string_content)
    (string_end)))

================================================================================
Number bin suffix expressions
================================================================================

1234Ki
--------------------------------------------------------------------------------

  (module
      (integer))

================================================================================
Config expressions
================================================================================

{
  "name" = {
    "name": "alice"
  },
  "gender" = "female"
}
--------------------------------------------------------------------------------

(module
  (dictionary
    (pair
      (string
        (string_start)
        (string_content)
        (string_end))
      (dictionary
        (pair
          (string
            (string_start)
            (string_content)
            (string_end))
          (string
            (string_start)
            (string_content)
            (string_end)))))
    (pair
      (string
        (string_start)
        (string_content)
        (string_end))
      (string
        (string_start)
        (string_content)
        (string_end)))))

================================================================================
Bracket expressions
================================================================================

[2 + 3]
--------------------------------------------------------------------------------

(module
  (list
    (binary_operator
      (integer)
      (integer))))

================================================================================
Braces expressions
================================================================================

{ a = 2 }
--------------------------------------------------------------------------------

(module
  (dictionary
    (pair
      (attribute
        (identifier))
      (integer))))

================================================================================
quantifier map expression
================================================================================

b = map k, v in {a = "foo", b = "bar"} { v } 

--------------------------------------------------------------------------------

(module
  (assignment
    (dotted_name
      (identifier))
    (quant_expr
      (quant_op)
      (identifier)
      (identifier)
      (quant_target
        (dictionary
          (pair
            (attribute
              (identifier))
            (string
              (string_start)
              (string_content)
              (string_end)))
          (pair
            (attribute
              (identifier))
            (string
              (string_start)
              (string_content)
              (string_end)))))
      (attribute
        (identifier)))))

================================================================================
quantifier filter expression
================================================================================

d = filter _, v in {a = "foo", b = "bar"} {v == "foo"}

--------------------------------------------------------------------------------

(module
  (assignment
    (dotted_name
      (identifier))
    (quant_expr
      (quant_op)
      (identifier)
      (identifier)
      (quant_target
        (dictionary
          (pair
            (attribute
              (identifier))
            (string
              (string_start)
              (string_content)
              (string_end)))
          (pair
            (attribute
              (identifier))
            (string
              (string_start)
              (string_content)
              (string_end)))))
          (comparison_operator
            (attribute
              (identifier))
            (string
              (string_start)
              (string_content)
              (string_end))))))

================================================================================
quantifier Any expression
================================================================================

schema Config:
    volumes: [{str:}]

    check:
        any volume in volumes {
            volume.mountPath in ["/home/admin", "/home/myapp"]
        }

--------------------------------------------------------------------------------

(module
  (schema_statement
    (identifier)
    (block
      (assignment
        (dotted_name
          (identifier))
        (list_type
          (type
            (dict_type
              (type
                (basic_type))))))
      (check_statement
        (quant_expr
          (quant_op)
          (identifier)
          (quant_target
            (identifier))
          (comparison_operator
            (dotted_name
              (identifier)
              (identifier))
            (list
              (string
                (string_start)
                (string_content)
                (string_end))
              (string
                (string_start)
                (string_content)
                (string_end)))))))))
