test/corpus/import.txt
================================================================================
import statements
================================================================================

import k8s.api

--------------------------------------------------------------------------------

(module
  (import_statement
    (dotted_name
      (identifier)
      (identifier))))

================================================================================
import statements with leading dot
================================================================================

import ..local.api

--------------------------------------------------------------------------------

(module
  (import_statement
    (import_prefix)
    (dotted_name
      (identifier)
      (identifier))))

================================================================================
import statements with as name
================================================================================

import k8s.api as k8s

--------------------------------------------------------------------------------

(module
  (import_statement
    (aliased_import
      (dotted_name
        (identifier)
        (identifier))
      (identifier))))

================================================================================
import statements with as name and leading dots
================================================================================

import ..local.api as local

--------------------------------------------------------------------------------

(module
  (import_statement
    (import_prefix)
    (aliased_import
      (dotted_name
        (identifier)
        (identifier))
      (identifier))))

================================================================================
import statements with multiple files
================================================================================

import pkg1
a = pkg1.foo + pkg1.bar + pkg1.baz

--------------------------------------------------------------------------------

(module
  (import_statement
    (dotted_name
      (identifier)))
  (assignment
    (dotted_name
      (identifier))
    (selector_expression
      (binary_operator
        (selector_expression
          (binary_operator
            (selector_expression
              (attribute
                (identifier))
              (select_suffix
                (identifier)))
            (attribute
              (identifier)))
          (select_suffix
            (identifier)))
        (attribute
          (identifier)))
      (select_suffix
        (identifier)))))
